Interface fix: makes visible private notes on bookmarks pages.
git-svn-id: https://semanticscuttle.svn.sourceforge.net/svnroot/semanticscuttle/trunk@285 b3834d28-1941-0410-a4f8-b48e95affb8f

--- a/scuttle.css
+++ b/scuttle.css
@@ -217,6 +217,11 @@ div.meta {
 div.meta span {
     color: #F00;
 }
+div.privateNote {
+    font-variant: small-caps;
+    font-size: small;
+    text-align: right;
+}
 li.xfolkentry {
     border-bottom: 1px solid #DDD;
     margin-bottom: 0;
